[package]
authors = ["Wouter Geraedts <git@woutergeraedts.nl>", "Sean Bowe <ewillbefull@gmail.com>", "Jack Grigg <thestr4d@gmail.com>"]
description = "Fork of the BLS12-381 pairing-friendly elliptic curve construction with target group serialization"
documentation = "https://docs.rs/pg-curve/"
homepage = "https://github.com/encryption4all/pg-curve"
license = "MIT/Apache-2.0"
name = "pg-curve"
repository = "https://github.com/encryption4all/pg-curve"
version = "0.2.0"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dev-dependencies]
csv = "1.4"
criterion = "0.3"
hex = "0.4"
rand_xorshift = "0.3"
sha2 = "0.9"
sha3 = "0.9"

[[bench]]
name = "groups"
harness = false
required-features = ["groups"]

[[bench]]
name = "hash_to_curve"
harness = false
required-features = ["experimental"]

[dependencies.digest]
version = "0.9"
optional = true

[dependencies.ff]
version = "0.13"
default-features = false

[dependencies.group]
version = "0.13"
default-features = false
optional = true

[dependencies.pairing]
version = "0.23"
optional = true

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "2.2.1"
default-features = false

[dependencies.zeroize]
version = "1.4"
default-features = false
optional = true

[features]
default = ["groups", "pairings", "alloc", "bits"]
bits = ["ff/bits"]
groups = ["group"]
pairings = ["groups", "pairing"]
alloc = ["group/alloc"]
experimental = ["digest"]
nightly = ["subtle/nightly"]
